# psychopy-mri-emulator

./: README.md  pyproject.toml
.github/workflows/: docs.yaml  pypi.yaml  tests.yaml
docs/: .buildinfo  index.html  objects.inv  searchindex.js
docs/.doctrees/: download.doctree  environment.pickle  index.doctree
docs/_sources/: download.rst.txt  index.rst.txt
docs/download/: index.html
docs/genindex/: index.html
docs/search/: index.html
docs_src/: conf.py  generatePages.py
docs_src/themes/psychopy_plugin/: layout.html  navbar.html
psychopy_mri_emulator/: __init__.py  emulator.py
tests/: test_entry_points.py
